<resources>
    <string name="app_name">Story Apps</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="maps">Maps</string>
    <string name="BTN_RETRY">Retry</string>
    <string name="tb_storyupload">Upload Story</string>
    <string name="btn_choose_image">Choose Image from Gallery</string>
    <string name="btn_take_photo">Take Photo from Camera</string>
    <string name="tv_descstoryupload">Fill Story Description</string>
    <string name="btn_upload_image">Upload Story</string>
    <string name="btn_floating">Upload Story Image</string>
    <string name="BACK_DESC">Back Button</string>
    <string name="IMAGE_DESC_STORY">Image Story</string>
    <string name="IMAGE_UPLOAD_SUCCESS">Post Uploaded Successfully</string>
    <string name="ERROR_EMAIL_INVALID_FORMAT">The email format entered is invalid</string>
    <string name="ERROR_EMAIL_ALREADY_REGISTERED">This email is already registered</string>
    <string name="ERROR_EMAIL_EMPTY">Email cannot be empty</string>
    <string name="ERROR_NAME_EMPTY">Name cannot be empty</string>
    <string name="ERROR_PASSWORD_EMPTY">Password cannot be empty</string>
    <string name="ERROR_PASSWORD_LENGTH">Password must be at least 8 characters long</string>
    <string name="ERROR_PASSWORD_MISMATCH">Password and confirm password do not match</string>
    <string name="ERROR_PASSWORD_NOTSAME">The password or email you entered is incorrect</string>
    <string name="ERROR_NAME_TOOLONG">Name cannot exceed 25 characters</string>
    <string name="ERROR_EDITEXT_EMPTY">Please fill in all fields correctly</string>
    <string name="INFO_LOGIN_TEXT">Already Have an Account?</string>
    <string name="LOGIN_TEXT">Login</string>
    <string name="LOGIN_APP_TEXT">Login Story Apps</string>
    <string name="WELCOME_LOGIN_TEXT">Welcome, Story Apps</string>
    <string name="INFO_REGISTER_TEXT">Dont Have an Account?</string>
    <string name="REGISTER_TEXT">Register</string>
    <string name="REGISTER_APP_TEXT">Register Story Apps</string>
    <string name="WELCOME_REGISTER_TEXT">Sign up, Story Apps</string>
    <string name="IMAGE_SHOW_FAILED">Show Image failed to initialize. See error logs for details</string>
    <string name="IMAGE_CAPTURE_FAILED">Capture Image failed to initialize. See error logs for details</string>
    <string name="IMAGE_UPLOAD_EMPTY">Image cannot be empty</string>
    <string name="CAPTION_UPLOAD_EMPTY">Caption cannot be empty</string>
    <string name="LOCATION_UPLOAD_EMPTY">Location cannot be empty</string>
    <string name="ERROR_STORY_WIDGET_EMPTY">Story Widget Empty</string>
    <string name="SETTINGS">Settings</string>
    <string name="CHANGE_LANGUAGE">Change Language</string>
    <string name="REPORT_BUG">Report Bug</string>
    <string name="LOGOUT">Log Out</string>
    <string name="LOGOUT_CONFIRMATION_TITLE">Logout Confirmation</string>
    <string name="LOGOUT_CONFIRMATION_MESSAGE">Are you sure you want to logout?</string>
    <string name="LOGOUT_CONFIRMATION_YES">Yes</string>
    <string name="LOGOUT_CONFIRMATION_CANCEL">Cancel</string>
    <string name="TITLE_WELCOME_PAGE">Welcome To Story Apps!</string>
    <string name="MESSAGE_WELCOME_PAGE">Welcome to Story Apps! Here, you can share your unique stories with the world instantly. Start your creative adventure by uploading your own stories.</string>
    <string name="INFO">Other Information</string>
    <string name="MSG_REGISTER">Complete the data for your account</string>
    <string name="MSG_LOGIN">Start your journey in Story Apps</string>
    <string name="MSG_DETAIL_STORY">Details Story</string>
    <string name="COPYRIGHT">Story Apps Rights Reserved.</string>
    <string name="NOT_FOUND_DATA">Not Found Data...</string>
    <string name="FULL_NAME">Full Name</string>
    <string name="EMAIL">Email</string>
    <string name="PASSWORD">Password</string>
    <string name="CONFIRM_PASSWORD">Confirm Password</string>
    <string name="HINT_FULL_NAME">Enter Full Name</string>
    <string name="HINT_EMAIL">Enter Your Email</string>
    <string name="HINT_PASSWORD">Enter Your Password</string>
    <string name="HINT_CONFIRM_PASSWORD">Enter Your Password</string>
    <string name="LAST_LOGIN">Last Login</string>
    <string name="ERROR_PERMISSION">Access to your location was denied. Please grant permission to enable this feature.</string>
    <string name="ERROR_LOCATION_OFF">Your devices location services are currently disabled. Please enable them to use this feature.</string>
    <string name="MY_LOCATION">Use My current location</string>
    <string name="PICK_MY_LOCATION">Use the Location I choose</string>
    <string name="PICK_POINT_STARTS">Pick Start Point</string>
    <string name="TOOLTIPS">Tooltips Detail Maps</string>
    <string name="TOOLTIPS_IMAGE">Tooltips Image Maps</string>
    <string name="AGREE">Yes</string>
    <string name="DISAGREE">Cancel</string>
    <string name="USE_LOCATION">Will you use this location?</string>
    <string name="NOTFOUND_USE_LOCATION">Location not found</string>
    <string name="PICK_LOCATION">Tap the map to select a location</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="description_splash">Don\\\'t hesitate to tell yourself\n</string>
    <string name="image_welcome">image_welcome\n</string>
    <string name="title_menu1">Easy and complicated application</string>
    <string name="description_menu1">You want to tell something heavy, calm down this application is the solution</string>
    <string name="title_menu2">Easy and Share Your Moment\n</string>
    <string name="description_menu2">When your day is heavy then this application is the solutio</string>
    <string name="let_start">Let\\\'s start</string>
    <string name="description_menu3">Let start with application my story, have god day to you are</string>
    <string name="start_now">Start Now</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
</resources>